# belief-set

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
belief_set/: __init__.py  agm.py  anytime.py  base.py  core.py  entrenchment.py  ic_merge.py  iterated.py  language.py
docs/: architecture.md
notes/: hansson-composite-meet-workstream.md  hansson-minimal-contraction-workstream.md  remediation-workstream.md
papers/: index.md
papers/Alchourron_1985_TheoryChange/: abstract.md  description.md  metadata.json  notes.md
papers/Booth_2006_AdmissibleRestrainedRevision/: abstract.md  citations.md  description.md  metadata.json  notes.md
papers/Grove_1988_TwoModellingsTheoryChange/: abstract.md  citations.md  description.md  metadata.json  notes.md
scripts/: check_workstream_order.py
tests/: test_agm_K_star_2_inconsistent_input.py  test_agm_contraction_preserves_spohn_state.py  test_agm_levi_identity.py  test_agm_postulate_audit.py  test_alphabet_budget_public_surface.py  test_belief_set_alphabet_growth_budget.py  test_belief_set_iterated_postulates.py  test_belief_set_postulates.py  test_hansson_belief_base_properties.py  test_ic_merge_IC4_fairness.py  test_ic_merge_Maj_Arb.py  test_ic_merge_distance_cache_stale_read.py  test_ic_merge_formula_protocol.py  test_ic_merge_infinite_distance_handling.py  test_ic_merge_outcome_shape.py  test_language_connectives.py  test_language_equivalence.py  test_package_import.py  test_paper_postulate_property_sweep.py  test_revision_trace.py  test_spohn_kpp_paper_backed_properties.py  test_spohn_state_invariants.py
(+17 files in other folders)
